@@ -19,3 +19,4 @@
 - Feature: Index all file types just like images
 - Feature: Add site: scope and filetype: scopes
 - Feature: Show simple date, mimetype, redirects, and status code in URL history view
+- Fixed: Added message is snapshot is truncated
